<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:gravity="center">
    
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/add_user"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadline4" />

        <ImageView
            android:id="@+id/add_user_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:srcCompat="@mipmap/ic_launcher_round"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/user_name_edit_text"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">
    
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
    
        </com.google.android.material.textfield.TextInputLayout>
    
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/user_number_edit_text"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">
    
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_user_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
    
        </com.google.android.material.textfield.TextInputLayout>
    
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/user_email_edit_text"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">
    
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
    
        </com.google.android.material.textfield.TextInputLayout>
    
        <Button
            android:id="@+id/done_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/done_button_text" />
    
    </LinearLayout>
</ScrollView>